# ultraface-plugin

./: .gitignore  138.js  138.js.map  328.js  328.js.map  976.js  976.js.map  Cargo.toml  README.md  example.ipynb  index.html  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
.github/workflows/: ci.yml
src/: index.js  lib.rs  test.py
